--- a/co-creation.html
+++ b/co-creation.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.4154818e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.db580457.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.cbef534f.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.46c8a1b8.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.20229266.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.9250ea2b.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/4.1219eb4a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a3e3ec65.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.64b1acc0.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.eea4e25b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.3d4e6d4a.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/4.7ca472fe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/TheTeam.adcbc9ff.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -33,11 +33,11 @@
 		<p class="md:text-center lg:text-xl text-slate-500 worksans uppercase tracking-wider">What&#39;s the Co-Creation Program
 		</p>
 
-		<div class="md:text-center text-xl md:text-2xl lg:text-3xl"><div class="md:text-center text-xl md:text-2xl lg:text-3xl"><p class="my-4 md:my-6 lg:my-9 leading-normal">The HC15 Co-Creation program is a <strong class="italic">full-service business support experience</strong> for women entrepreneurs where we will address more than just “The Business”.</p>
-				<p class="my-4 md:my-6 lg:my-9 leading-normal">Our program consists of <strong class="italic">three facilitated sessions</strong> where we discover the core of your motivation, business and means to implement with Sinek&#39;s Golden Circle model as the basis. We then validate your idea and/or services, in order to provide you with a doable plan tailored upon to you and your business needs.</p></div></div></div></article>
+		<div class="md:text-center text-xl md:text-2xl lg:text-3xl"><div class="md:text-center text-xl md:text-2xl lg:text-3xl"><p class="my-4 md:my-6 lg:my-9 leading-normal">The HC15 Co-Creation program is a <strong class="italic">full-service business support experience</strong> for entrepreneurs where we will address more than just “The Business”.</p>
+				<p class="my-4 md:my-6 lg:my-9 leading-normal">Our program consists of <strong class="italic">three transformative stages</strong> where we discover the core of your motivation, business and means to implement with Sinek&#39;s Golden Circle model as the basis. We then validate your idea and/or services, in order to provide you with a doable plan tailored upon to you and your business needs.</p></div></div></div></article>
 
 
-<article class="py-14 md:py-16 lg:py-24 bg-[#e9e9e1] overflow-x-hidden text-cyan-950" id="threesessions"><div class="max-w-6xl mx-auto px-4"><h1 class="md:text-center text-4xl md:text-6xl lg:text-7xl tracking-wide mb-4 lg:mb-11">Three sessions</h1>
+<article class="py-14 md:py-16 lg:py-24 bg-[#e9e9e1] overflow-x-hidden text-cyan-950" id="threesessions"><div class="max-w-6xl mx-auto px-4"><h1 class="md:text-center text-4xl md:text-6xl lg:text-7xl tracking-wide mb-4 lg:mb-11">Three Stages of Coaching</h1>
 
 		<div class="my-6 md:my-12 lg:my-16 text-center text-md md:text-xl flex flex-col lg:flex-row gap-4 lg:gap-6 flex-wrap"><div class="md:mx-auto md:w-1/2 group block relative lg:w-[calc(100%/3-16px)] rounded-lg bg-white p-4 md:p-6"><h2 class="text-left md:text-center text-xl md:text-2xl mb-4 lg:mb-6">Identifying the WHY
 				</h2>
@@ -59,8 +59,9 @@
 					<li class="mb-1.5"><i class="fa-regular fa-stop fa-lg mr-2"></i> Business functions</li>
 					<li class="mb-1.5"><i class="fa-regular fa-stop fa-lg mr-2"></i> Measurables</li></ul></div></div>
 
-		<p class="md:text-center text-md md:text-xl lg:text-2xl !leading-normal"><strong class="italic">Each stage is led by experienced entrepreneurs</strong>. The collaborative process is a unique flow of interchanging experts that cover a range of areas. Co-Creation sessions are set up in stages depending on where the individual is in their business, this will depend on the application filled out by the individuals.
-		</p></div></article>
+		<p class="md:text-center text-md md:text-xl lg:text-2xl !leading-normal"><strong class="italic">Each stage is led by experienced entrepreneurs</strong>. The program process is a unique flow of interchanging experts that cover a range of areas. Co-Creation sessions are set up in stages depending on where the individual is in their business, this will depend on the application filled out by the individuals.
+		</p>
+		<p class="md:text-center mt-4 md:pt-6 lg:mt-9"><a href="https://www.venopi.com/widget/co-creation-with-hc15-alliance/" class="button" target="_blank">Book Co-Creation</a></p></div></article>
 
 <article class="py-14 md:py-16 lg:py-24 bg-[#817c52] overflow-x-hidden" id="theteam"><div class="max-w-5xl mx-auto px-4"><h1 class="md:text-center text-4xl md:text-6xl lg:text-7xl tracking-wide text-white mb-4 lg:mb-11">The Team</h1>
 		<p class="md:text-center lg:text-xl text-slate-200 italic tracking-wide">Meet our 13 diverse and accomplished women entrepreneurs
@@ -136,7 +137,7 @@
 			
 			<script>
 				{
-					__sveltekit_6dbiw = {
+					__sveltekit_2pjafr = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -146,8 +147,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.4154818e.js"),
-						import("./_app/immutable/entry/app.46c8a1b8.js")
+						import("./_app/immutable/entry/start.db580457.js"),
+						import("./_app/immutable/entry/app.64b1acc0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
