--- a/alliance.html
+++ b/alliance.html
@@ -6,12 +6,12 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.4154818e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.db580457.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.cbef534f.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.46c8a1b8.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.20229266.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.9250ea2b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a3e3ec65.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.64b1acc0.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.eea4e25b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.3d4e6d4a.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.7dad8d2c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/TheTeam.adcbc9ff.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
@@ -109,7 +109,7 @@
 			
 			<script>
 				{
-					__sveltekit_6dbiw = {
+					__sveltekit_2pjafr = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -119,8 +119,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.4154818e.js"),
-						import("./_app/immutable/entry/app.46c8a1b8.js")
+						import("./_app/immutable/entry/start.db580457.js"),
+						import("./_app/immutable/entry/app.64b1acc0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
