--- a/team/raquel.html
+++ b/team/raquel.html
@@ -6,14 +6,14 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.4154818e.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.db580457.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.cbef534f.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.46c8a1b8.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.20229266.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.9250ea2b.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/11.dbca6a8a.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4ae96c7.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.a3e3ec65.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.64b1acc0.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.eea4e25b.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.3d4e6d4a.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/11.9f9993ae.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a3197fac.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -30,7 +30,7 @@
 
 	<section class="content"><article class="pt-24 pb-9 lg:pb-16"><div class="px-4 max-w-4xl mx-auto worksans text-sm"><a href="/alliance#theteam"><i class="fa-light fa-arrow-left mr-2"></i>View the team</a></div>
 
-	<div class="md:mt-6 lg:mt-16 px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto mb-6 lg:mb-10"><div class="w-24 h-24 mx-auto lg:w-1/3 lg:h-64 relative"><div class="w-full h-full absolute overflow-hidden rounded-md"><img src="/images/raquel.jpg" alt="Raquel Sobral" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div></div>
+	<div class="md:mt-6 lg:mt-16 px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto mb-6 lg:mb-10"><div class="w-24 h-24 mx-auto lg:w-1/3 lg:h-64 relative"><div class="w-full h-full absolute overflow-hidden rounded-md"><img src="/images/raquel.jpg" alt="Raquel Sobral" class="w-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0"></div></div>
 
 	<div class="lg:w-2/3"><h1 class="text-center lg:text-left text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950">Raquel <span class="italic text-[#fca806]">Sobral</span></h1></div></div>
 
@@ -75,7 +75,7 @@
 			
 			<script>
 				{
-					__sveltekit_6dbiw = {
+					__sveltekit_2pjafr = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -85,8 +85,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.4154818e.js"),
-						import("../_app/immutable/entry/app.46c8a1b8.js")
+						import("../_app/immutable/entry/start.db580457.js"),
+						import("../_app/immutable/entry/app.64b1acc0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 11],
