--- a/co-creation.html
+++ b/co-creation.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.db580457.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.b9320178.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a3e3ec65.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.64b1acc0.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.eea4e25b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.3d4e6d4a.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/4.7ca472fe.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.b8102da1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d7394d8b.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.d4bafb43.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.56ed8254.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/4.a01587ea.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/TheTeam.adcbc9ff.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -61,7 +61,7 @@
 
 		<p class="md:text-center text-md md:text-xl lg:text-2xl !leading-normal"><strong class="italic">Each stage is led by experienced entrepreneurs</strong>. The program process is a unique flow of interchanging experts that cover a range of areas. Co-Creation sessions are set up in stages depending on where the individual is in their business, this will depend on the application filled out by the individuals.
 		</p>
-		<p class="md:text-center mt-4 md:pt-6 lg:mt-9"><a href="https://www.venopi.com/widget/co-creation-with-hc15-alliance/" class="button" target="_blank">Book Co-Creation</a></p></div></article>
+		<p class="md:text-center mt-4 md:pt-6 lg:mt-9"><a href="https://www.venopi.com/widget/co-creation-with-hc15-alliance/" class="button" target="_blank">Pricing &amp; Booking</a></p></div></article>
 
 <article class="py-14 md:py-16 lg:py-24 bg-[#817c52] overflow-x-hidden" id="theteam"><div class="max-w-5xl mx-auto px-4"><h1 class="md:text-center text-4xl md:text-6xl lg:text-7xl tracking-wide text-white mb-4 lg:mb-11">The Team</h1>
 		<p class="md:text-center lg:text-xl text-slate-200 italic tracking-wide">Meet our 13 diverse and accomplished women entrepreneurs
@@ -137,7 +137,7 @@
 			
 			<script>
 				{
-					__sveltekit_2pjafr = {
+					__sveltekit_lmbg3a = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -147,8 +147,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.db580457.js"),
-						import("./_app/immutable/entry/app.64b1acc0.js")
+						import("./_app/immutable/entry/start.b9320178.js"),
+						import("./_app/immutable/entry/app.d7394d8b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
