--- a/team/ivana.html
+++ b/team/ivana.html
@@ -6,12 +6,12 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.db580457.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.b9320178.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.a3e3ec65.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.64b1acc0.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.eea4e25b.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.3d4e6d4a.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b8102da1.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.d7394d8b.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.d4bafb43.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.56ed8254.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/6.105fca6d.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a3197fac.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonProjects.994b48ac.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
@@ -87,7 +87,7 @@
 			
 			<script>
 				{
-					__sveltekit_2pjafr = {
+					__sveltekit_lmbg3a = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -97,8 +97,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.db580457.js"),
-						import("../_app/immutable/entry/app.64b1acc0.js")
+						import("../_app/immutable/entry/start.b9320178.js"),
+						import("../_app/immutable/entry/app.d7394d8b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
