--- a/team/madelin.html
+++ b/team/madelin.html
@@ -6,12 +6,12 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.b9320178.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.d00e8df1.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b8102da1.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.d7394d8b.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.d4bafb43.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.56ed8254.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.2fed9d4e.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.b5b3d8c2.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.d41ec6b7.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.f614b6f8.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/10.31459972.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a3197fac.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
@@ -74,7 +74,7 @@
 			
 			<script>
 				{
-					__sveltekit_lmbg3a = {
+					__sveltekit_8qcba4 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -84,8 +84,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.b9320178.js"),
-						import("../_app/immutable/entry/app.d7394d8b.js")
+						import("../_app/immutable/entry/start.d00e8df1.js"),
+						import("../_app/immutable/entry/app.b5b3d8c2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 10],
