--- a/team/zsuzsanna.html
+++ b/team/zsuzsanna.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.b9320178.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.d00e8df1.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b8102da1.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.d7394d8b.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.d4bafb43.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.56ed8254.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/17.6717be55.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.2fed9d4e.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.b5b3d8c2.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.d41ec6b7.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.f614b6f8.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/17.616350bf.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a3197fac.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -46,7 +46,7 @@
 		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6 text-gray-500 italic">Founder of Womazing.eu.</p>
 				<p class="mb-4 lg:mb-6">Zsuzsanna&#39;s academic journey has been fueled by a love for research that goes beyond the surface. She strongly believes that understanding the „why” and intercultural communication leave a positive imprint on our world. Having spent years in foreign countries, Zsuzsanna is passionate to connect people and empower women across cultures.
 				</p>
-				<p class="mb-4 lg:mb-6">With a background of customer service &amp; event management, she has mastered the art of creating lasting connections in diverse cultures. For her, networking is much more than business; it is a medium for sharing values, fostering collaboration, and shaping a brigther furture together. For this reason, Zsuzsanna launched <a href="https://womazing.eu/" target="_blank">womazing.eu</a> where she is cultivating a network that amplifies women&#39;s stories, expertise and dreams to drive impactful change around us.
+				<p class="mb-4 lg:mb-6">With a background of international project management, she has mastered the art of creating lasting connections in diverse cultures. For her, networking is much more than business; it is a medium for sharing values, fostering collaboration, and shaping a brigther furture together. For this reason, Zsuzsanna launched <a href="https://womazing.eu/" target="_blank">womazing.eu</a> where she is cultivating a network that amplifies women&#39;s stories, expertise and dreams to drive impactful change around us.
 				</p></div>
 
 			<div class="mt-4 md:mt-6 lg:mt-9 pt-4 md:pt-6 lg:pt-9 border-t border-slate-200"><p class="text-base lg:text-lg text-slate-500 worksans uppercase tracking-wider">I can help you with
@@ -74,7 +74,7 @@
 			
 			<script>
 				{
-					__sveltekit_lmbg3a = {
+					__sveltekit_8qcba4 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -84,8 +84,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.b9320178.js"),
-						import("../_app/immutable/entry/app.d7394d8b.js")
+						import("../_app/immutable/entry/start.d00e8df1.js"),
+						import("../_app/immutable/entry/app.b5b3d8c2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 17],
